[package]
name = "catnet"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]

# [lib]
# name = "catnet_internal"
# path = "src/lib.rs"
# crate-type = ["staticlib"]

# [[bin]]
# name = "catnetd"
# path = "src/bin/drivers/catnetd/main.rs"

[dependencies]
clap = "3.0.0-beta.2" # CLI stuff
log = "0.4.14" # Logging facade (front end, provides logging macros)
fern = { version = "0.6.0", features = ["colored"] } # Logging backend (actually logs the stuff)
chrono = "0.4.19" # For time stuff
mio = { version = "0.7.13", features = ["os-poll", "net"] } # Socket stuff
snafu = "0.6.10" # Situation normal all fucked up (error handling library)
serde = { version = "1.0.126", features = ["derive"] } # Serialisation/Deserialisation front end
bincode = "1.3.3" # Super fast serde backend
rand = { version = "0.8.4", features = ["std_rng"] } # Random number generation
